# predictex

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 8710345d53dc_teams_state_and_nullable_city_columns.py  9cda593c8509_initial_core_schema.py  e4ee33db31c0_add_team_season_stats_raw_table.py
docs/: plan_maestro.md  progreso_proyecto.md  schema_core.md
src/: config.py  db.py  exceptions.py  logging_config.py
src/data/: models.py  schema_validation.py
src/ingestion/: api_football_client.py  api_football_ingest.py  bootstrap_historical.py  constants.py  football_data_client.py  football_data_mapper.py  quota_guard.py  rate_limiter.py
tests/: test_api_football_client.py  test_api_football_ingest.py  test_bootstrap_historical.py  test_db_connection.py  test_exceptions.py  test_football_data_client.py  test_football_data_mapper.py  test_logging_config.py  test_models.py  test_schema_validation.py  test_setup.py
tests/fixtures/: sample_matches.csv
